minor work on workflow and plato cap components

--- a/lib/src/_application/workflow/workflow_component.html
+++ b/lib/src/_application/workflow/workflow_component.html
@@ -1,5 +1,10 @@
 <div>
-  <material-expansionpanel id="patron-user-panel">
+  <material-expansionpanel
+      id="patron-user-panel"
+      name="CAP Instructor Authorization"
+      secondaryText="Authorization to review CAP forms data"
+      [expanded]="true"
+      [showSaveCancel]="false">
     <patron-user></patron-user>
   </material-expansionpanel>
 
