work on submissions review and related code

--- a/lib/src/_application/workflow/workflow_component.html
+++ b/lib/src/_application/workflow/workflow_component.html
@@ -35,6 +35,6 @@
       [expanded]="false"
       [showSaveCancel]="false"
       disabled>
-    <p>Stuff relating to reviewing the submissions will appear here.</p>
+    <submissions-review></submissions-review>
   </material-expansionpanel>
 </div>
